[gd_scene load_steps=14 format=2]

[ext_resource path="res://Nexa.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://images/fame.png" type="Texture" id=2]
[ext_resource path="res://scenes/buttonfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/cards/cargo_card.tscn" type="PackedScene" id=4]
[ext_resource path="res://images/deck.png" type="Texture" id=5]
[ext_resource path="res://images/buy.png" type="Texture" id=6]
[ext_resource path="res://images/skip.png" type="Texture" id=7]
[ext_resource path="res://scenes/decks/luxury_deck.gd" type="Script" id=8]
[ext_resource path="res://scenes/cards/gear_card.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/cards/crew_card.tscn" type="PackedScene" id=10]
[ext_resource path="res://images/cargo-bg.png" type="Texture" id=11]
[ext_resource path="res://scenes/cards/mod_card.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFont" id=1]
size = 10
use_filter = true
font_data = ExtResource( 1 )

[node name="LuxuryDeck" type="TextureRect"]
unique_name_in_owner = true
margin_right = 96.0
margin_bottom = 128.0
texture = ExtResource( 5 )
script = ExtResource( 8 )

[node name="Bg" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.0392157 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 11 )

[node name="DeckType" type="TextureRect" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 7
custom_constants/margin_bottom = 4

[node name="Card" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
margin_left = 7.0
margin_top = 4.0
margin_right = 92.0
margin_bottom = 124.0

[node name="CargoCard" parent="MarginContainer/Card" instance=ExtResource( 4 )]
visible = false
margin_left = 0.0
margin_top = 0.0
margin_right = 85.0
margin_bottom = 81.0
size_flags_vertical = 3

[node name="CrewCard" parent="MarginContainer/Card" instance=ExtResource( 10 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 85.0
margin_bottom = 97.0
size_flags_vertical = 3

[node name="GearCard" parent="MarginContainer/Card" instance=ExtResource( 9 )]
visible = false
margin_left = 0.0
margin_top = 144.0
margin_right = 85.0
margin_bottom = 225.0
size_flags_vertical = 3

[node name="ModCard" parent="MarginContainer/Card" instance=ExtResource( 12 )]
visible = false
margin_left = 0.0
margin_top = 229.0
margin_right = 85.0
margin_bottom = 324.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Bottom" type="HBoxContainer" parent="MarginContainer/Card"]
unique_name_in_owner = true
margin_top = 101.0
margin_right = 85.0
margin_bottom = 120.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Card/Bottom"]
margin_right = 57.0
margin_bottom = 19.0
size_flags_horizontal = 3

[node name="Buy" type="Button" parent="MarginContainer/Card/Bottom/MarginContainer"]
unique_name_in_owner = true
margin_right = 38.0
margin_bottom = 19.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "1K"
icon = ExtResource( 6 )

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/Card/Bottom"]
margin_left = 61.0
margin_right = 85.0
margin_bottom = 19.0

[node name="Skip" type="Button" parent="MarginContainer/Card/Bottom/MarginContainer2"]
unique_name_in_owner = true
margin_right = 24.0
margin_bottom = 19.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
disabled = true
icon = ExtResource( 7 )

[connection signal="helped" from="MarginContainer/Card/CargoCard" to="." method="_on_help_pressed"]
[connection signal="helped" from="MarginContainer/Card/CrewCard" to="." method="_on_help_pressed"]
[connection signal="helped" from="MarginContainer/Card/GearCard" to="." method="_on_help_pressed"]
[connection signal="helped" from="MarginContainer/Card/ModCard" to="." method="_on_help_pressed"]
[connection signal="pressed" from="MarginContainer/Card/Bottom/MarginContainer/Buy" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="MarginContainer/Card/Bottom/MarginContainer2/Skip" to="." method="_on_skip_pressed"]
